hit-stages updated and margin changes made

--- a/AT.html
+++ b/AT.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 id="head">Abhorrent Terror</h1>
-    <h2 id="score">Score.</h2>
     <div id="surface"></div>
+    <h1 id="score">Score</h2>
 </body>
 </html>
