added music components to the game

--- a/AT.html
+++ b/AT.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <button id="b1">PLAY</button>
     <h1 id="head">Abhorrent Terror</h1>
     <div id="surface"></div>
     <h1 id="score">Score</h2>
