--- a/Abhorrent Terror.html
+++ b/Abhorrent Terror.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhorrent Terror</title>
+    <link rel="icon" type="image/png" href="i1.png">
     <link rel="stylesheet" href="AT.css">
     <script src="AT.js"></script>
 </head>
